重构kafka demo