@@ -5,12 +5,13 @@
 1. HBaseDemo：简单的HBase二次开发程序，传入表名，如果不存在，则创建；然后列出所有的表
 2. HDFSDemo：列出根目录/下的所有文件与文件夹
 3. HiveDemo：连接hiveserver，并列出所有的数据库
-4. KafkaDemo：包含一个producer和consumer程序，一个用来向test_topic发送数据，一个用来从test_topic读取数据
-5. MapReduceDemo：wordCount程序
-6. SparkDemo： spark版本的wordCount，使用spark-submit提交
-7. SparkLauncherDemo： spark版本的wordCount，使用java直接提交
-8. ReadHiveTableDemo：使用spark读取hive表的数据
-9. WriteHiveTableDemo：使用spark输出数据到hive表
+4. KafkaProducerDemo：向指定topic发送数据
+5. KafkaConsumerDemo：消费指定topic的数据
+6. MapReduceDemo：wordCount程序
+7. SparkDemo： spark版本的wordCount，使用spark-submit提交
+8. SparkLauncherDemo： spark版本的wordCount，使用java直接提交
+9. ReadHiveTableDemo：使用spark读取hive表的数据
+10. WriteHiveTableDemo：使用spark输出数据到hive表
 ***
 ### 编译出的jar包如何运行 
 &#160; &#160; &#160; &#160;使用maven编译出 dev-demo-1.0-SNAPSHOT.jar，使用java命令直接执行，各功能模块执行方式如下。
@@ -21,10 +22,10 @@
 ```
 java -cp dev-demo-1.0-SNAPSHOT.jar:/usr/hdp/2.2.0.0-2041/hbase/lib/* com.tencent.tbds.demo.hbase.HBaseDemo --auth-id <id> --auth-key <key> --zk-list <zookeeper host list> --table-name <table name>
 ```
-参数解释:   
+参数解释:  
 auth-id: 认证ID  
 auth-key: 认证key  
-zk-list: zookeeper主机列表  
+zk-list: zookeeper主机列表，如tbds-172-16-0-30,tbds-172-16-0-29    
 table-name: hbase表名  
 
 ***
@@ -41,7 +42,7 @@ auth-key: 认证key
 ***
 #### 运行 HiveDemo 
 **准备** <br>
-1. 代码中默认采用高可用连接方式，因此在运行程序时需要传入zk地址、用户名、密码
+代码中默认采用高可用连接方式，因此在运行程序时需要传入zk地址、用户名、密码
 
 **运行**<br>
 *假定在dev-demo-1.0-SNAPSHOT.jar所在目录执行*<br>
@@ -50,48 +51,35 @@ java -cp dev-demo-1.0-SNAPSHOT.jar:/usr/hdp/2.2.0.0-2041/hive/lib/*:/usr/hdp/2.2
 ```
 
 参数解释:  
-zk-list: zookeeper地址列表  
+zk-list: zookeeper地址列表，如tbds-172-16-0-30:2181,tbds-172-16-0-29:2181   
 user: 连接hive的用户名  
 password: 连接hive的密码  
 
 ***
-#### 运行 KafkaDemo 
-**准备** <br>
-1. 在源码中做了如下设置：
-    ```
-    // 也可以把认证以及配置信息以key-value的方式写入到一个properties配置文件中，使用时直接载入
-     properties.load(new BufferedInputStream(new FileInputStream("/opt/cluster_conf/kafka/kafka_conf.properties")));
-    ```
-    即从路径/opt/cluster_conf/kafka/kafka_conf.properties 中读取配置信息，所以请新建该文件，该文件的内容样例如下：
-    ```
-    vim /opt/cluster_conf/kafka/kafka_conf.properties
- 
-    bootstrap.servers=tbds-10-3-0-13:6667,tbds-10-3-0-4:6667,tbds-10-3-0-6:6667
-    group.id=TestConsumerGroup
-    security.protocol=SASL_TBDS
-    sasl.mechanism=TBDS
-    sasl.tbds.secure.id=3co1dctXP4Hi3BqKxLK5b6sgZxSBZc8giBLT
-    sasl.tbds.secure.key=zslYbcsrd7Mc1sCLcFErjV7U5DPvdcn9
+#### 运行 KafkaProducerDemo 
+*假定在dev-demo-1.0-SNAPSHOT.jar所在目录执行*<br>
 
-    ```
-    其中bootstrap.servers为brokers的地址和端口，group.id为消费者组，sasl.tbds.secure.id为认证id，sasl.tbds.secure.key为认证key，其他为固定配置
-2. 本demo为producer和consumer的样例，不会自动创建topic，所以请预先通过后台命令创建topic: test_topic
-    ```
-    cd /data/bigdata/tbds/usr/hdp/2.2.0.0-2041/kafka/bin
-    ./kafka-topics.sh --create --zookeeper tbds-10-3-0-13:2181,tbds-10-3-0-17:2181,tbds-10-3-0-7:2181 --replication-factor 2 --partitions 2 --topic test_topic
-    ```
+```
+ java -cp dev-demo-1.0-SNAPSHOT.jar:/usr/hdp/2.2.0.0-2041/kafka/libs/* com.tencent.tbds.demo.kafka.KafkaProducerDemo --auth-id <id> --auth-key <key> --kafka-brokers <kafka broker list> --topic <topic name>
+```
+参数解释:   
+auth-id: 认证ID  
+auth-key: 认证key  
+kafka-brokers: kafka brokers列表，如tbds-172-16-0-30:6667  
+topic: 指定数据发送到哪个topic
 
-**运行producer**<br>
-*请在不同的shell窗口中分别执行producer和consumer* </br>
+***
+#### 运行 KafkaConsumerDemo
 *假定在dev-demo-1.0-SNAPSHOT.jar所在目录执行*<br>
 ```
- java -Djava.ext.dirs=/usr/hdp/2.2.0.0-2041/kafka/libs:/usr/hdp/2.2.0.0-2041/hadoop  -cp dev-demo-1.0-SNAPSHOT.jar com.tencent.tbds.demo.KafkaDemo producer
+ java -cp dev-demo-1.0-SNAPSHOT.jar:/usr/hdp/2.2.0.0-2041/kafka/libs/* com.tencent.tbds.demo.kafka.KafkaConsumerDemo --auth-id <id> --auth-key <key> --kafka-brokers <kafka broker list> --topic <topic name>
 ```
-**运行consumer**<br>
-*假定在dev-demo-1.0-SNAPSHOT.jar所在目录执行*<br>
-```
- java -Djava.ext.dirs=/usr/hdp/2.2.0.0-2041/kafka/libs:/usr/hdp/2.2.0.0-2041/hadoop  -cp dev-demo-1.0-SNAPSHOT.jar com.tencent.tbds.demo.KafkaDemo consumer
-```
+参数解释:   
+auth-id: 认证ID  
+auth-key: 认证key  
+kafka-brokers: kafka brokers列表，如tbds-172-16-0-30:6667  
+topic: 指定消费哪个topic的数据  
+offset-reset: 可选参数，默认值是latest  
 
 ***
 #### 运行 MapReduceDemo 
